--- a/package.json
+++ b/package.json
@@ -40,7 +40,11 @@
     "snake-case": "^2.1.0",
     "sodium": "^3.0.2",
     "uuid": "^3.2.1",
-    "varint": "^5.0.0"
+    "varint": "^5.0.0",
+    "lodash.merge": ">=4.6.2",
+    "extend": ">=3.0.2",
+    "lodash.merge": ">=4.6.2",
+    "handlebars": ">=4.0.14"
   },
   "devDependencies": {
     "@types/inquirer": "0.0.37",
